fix(App.css): add z-index to header

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ header {
   position: sticky;
   top: 0;
   background-color: #fff;
+  z-index: 1;
 }
 
 header > div {
